fixed header text on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -18,37 +18,6 @@ header{
   height: 767px;
   color: #FFFFFF;
 }
-@media (max-height: 760px){
-  .image_header{
-    height: 500px;
-  }
-}
-
-@media (max-height: 300px){
-  .image_header{
-    height: 320px;
-  }
-}
-
-.image_header{
-  position: relative;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 767px;
-  color: #FFFFFF;
-}
-@media (max-height: 760px){
-  .image_header{
-    height: 500px;
-  }
-}
-
-@media (max-height: 300px){
-  .image_header{
-    height: 320px;
-  }
-}
-
 .clear{
   clear: both;
 }
@@ -65,6 +34,23 @@ header{
   top: 30%;
   text-align: center;
   width: 100%;
+}
+@media (max-height: 760px){
+  .image_header{
+    height: 500px;
+  }
+}
+
+@media (max-height: 300px){
+  .image_header{
+    height: 320px;
+  }
+}
+
+@media (max-width: 480px){
+  .image_header .header_text{
+    top: 20%;
+  }
 }
 
 
